# 01-rcli

./: Cargo.toml  deny.toml  test.rest
assets/: index.html
examples/: chacha20.rs
fixtures/: blake3.txt  ed25519.sign  ed25519.verify  std.txt  url.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: b64.rs  csv.rs  http.rs  jwt.rs  mod.rs  pass.rs  text.rs
src/opts/: csv_opts.rs  mod.rs
src/process/: b64.rs  convert_csv.rs  gen_pass.rs  http.rs  jwt.rs  mod.rs  text.rs
