[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["Xiaobin Li <l_xb@foxmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http2", "macros", "tracing"] }
base64 = "0.22"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
rand = "0.8"
regex = "1"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zxcvbn = "2"
